# task-companion-ai

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
companion/: cli.py  companion.py  prompt.py  tools.py  utils.py
companion/db/: conversation_history.py  feed.py  tasks.py  utils.py
containers_python_django/: asgi.py  init_and_wsgi.sh  settings.py  startup.sh  urls.py  websocket_urls.py
main/: consumers.py  routing.py  views.py
main/migrations/: 0001_initial.py
main/models/: tasks.py  utils.py
main/serializers/: tasks.py
main/templates/: home.html
main/utils/: agent.py  generators.py  json_encoder.py  tools.py
main/views/: __init__.py  ai.py  health.py  home.py  stream_demo.py  tasks.py
main/views/companion/: ai.py  chat.py  tools.py
test/companion/db/: test_feed.py
